# Fluffys-website

./: .gitignore  README.md  about.html  app.js  app.py  docker-compose.yml  home.html  index.php  introduction.html  more.html  old_home.html  php_test.html  pictures.html  pyproject.toml  requirements.txt  run.sh  social.html  style.css  stylesheet.css
PHP_test/: menu.php
articles/: urls.py  views.py
css/: _footer.scss  _hero.scss  _nav.scss  _variables.scss  footer.css  main.css  nav.css  style.css  style.css.map  style.scss
scripts/: gallery.js
static/css/: _aside.scss  _footer.scss  _nav.scss  _wrapper.scss  buttons.sass  khand.css  style.css  style.css.map  style.sass  style.scss  toast.sass  zodiak.css
static/css/scss/: _grid.scss  _normalize.scss  _variables.scss
static/js/: main.js  navigation.js  title.js
static/sass/: styles.sass
static/sass/styles/: art-block.sass  back-button.sass  button-array.sass  footer.sass  markdown.sass  navigation.sass  table.sass
templates/: about.html  base.html  blog.html  cretura.html  error.html  footer.html  funny.html  index.html  layout.html  music.html  navigation.html  thankies.html
templates/views/: article.html  articles.html  index.html  refsheet.html
website/: Dockerfile  requirements.txt  run.sh  settings.py  urls.py
website/articles/: models.py  views.py
website/articles/migrations/: 0004_article_published.py  0005_alter_article_thumb.py
website/static/sass/: styles.sass
website/templates/: base.html  footer.html
website/templates/views/: index.html
website/website/: settings.py
(+16 files in other folders)
