[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Fluffy-Bean <michal-gdula@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.11"
pillow = "^10.3.0"
django-libsass = "^0.9"
django-compressor = "^4.3.1"
django-markdownify = "^0.9.3"
black = "^24.3.0"
python-dotenv = "^1.0.0"
tzdata = "^2023.3"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
